--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-asgiref==3.5.0
-backports.zoneinfo==0.2.1
+asgiref==3.6.0
 Django==4.0.3
-pkg_resources==0.0.0
-sqlparse==0.4.2
+sqlparse==0.4.3
+tzdata==2022.7
