--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 asgiref==3.6.0
+black==22.12.0
+click==8.1.3
+colorama==0.4.6
 Django==4.0.3
+gunicorn==20.1.0
+mypy-extensions==0.4.3
+pathspec==0.10.3
+platformdirs==2.6.0
 sqlparse==0.4.3
 tzdata==2022.7
